# ecubee_old

./: .gitignore  Box.cpp  CMakeLists.txt  CreateWindows.cpp  CustomCamera.cpp  CustomCamera.h  HMC5843.cpp  HMC5843.h  LIS3LV02DL.cpp  LIS3LV02DL.h  Makefile.old  README.md  acos.cpp  acos.h  communicator.cpp  communicator.h  dimensions.h  i2cManager.cpp  i2cManager.h  main.cpp  rs232.cpp  rs232.h
